Tue Mar 14 17:38:28 1995 Keith Vetter (keithv@fusion.com)

	* k5-config.h: more PC changes, mostly dealing with chmod not 
	   working as it should on the PC.
	* func-proto.h, los-proto.h: moved prototypes for krb5_timeofday and
	   krb5_os_localaddr from los-proto to func-proto. They are needed by
	   the outside world, specifically kinit.c

Fri Mar 10 14:23:12 1995  Theodore Y. Ts'o  <tytso@dcl>

	* sysincl.h: Removed definition of FD_SETSIZE, FD_SET, FD_CLR,
		FD_ISSET, and FD_ZERO.  Defining them in favor of using
		the system include files is almost always wrong.

Fri Mar 10 10:04:41 1995 Chris Provenzano (proven@mit.edu)

	* func-proto.h (krb5_mk_req(), krb5_mk_req_extended(), krb5_rd_rep(),
		krb5_sendauth(), krb5_mk_priv(), krb5_rd_priv(), krb5_mk_safe(),
		and krb5_rd_safe()). Added a krb5_auth_context argument and
		eliminated many of the other arguments because they are 
		included in the krb5_auth_context structure.

	* fieldbits.h Added #define AP_OPTS_USE_SUBKEY 0x00000001 for a
		new option to an ap req message. This is mainly a clean way
		to inform krb5_mk_req() and krb5_mk_req_extended() to 
		create the subkey without adding an extra argument.

	* safepriv.h Replace safe/priv flags with flags for krb5_auth_context
		and add krb5_replay_data structure for when the appilication
		want to do it's own replay detection for safe and priv calls.


Thu Mar  9 18:29:24 1995  Mark Eichin  <eichin@cygnus.com>

       * Makefile.in (all-windows): tabs, not spaces.

Tue Mar 7 14:54:02 1995 Keith Vetter (keithv@fusion.com)

	* ccache.h: added windows INTERFACE keyword to all functions.
        * encryption.h: more segment games for the PC--added NEAR to three
           external data objects.
        * wordsize.h: added constants VALID_INT_BTIS and VALID_UINT_BITS for
           detecting overflow when casting a long to an int.
        * k5-config.h: numerous PC changes such as adding NEED_LOWLEVEL_IO
           which enables the read/write level of I/O.